--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "prop-types": "^15.5.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-materialize": "^0.18.3",
     "react-router": "^1.0.3",
+    "react-search-input": "^0.11.1",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^1.14.1"
   }
